Added one more student

--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
 <p class="p2"><span class="s1"><b></b></span></p>
 <h2>Student names<h2>
   <p>Diana Pelican<p> 
+    <p>Emilbek Almaz uulu</p>
 </body>
 </html>
