Added 3 more students

--- a/index.html
+++ b/index.html
@@ -22,5 +22,8 @@
     <p>Emilbek Almaz uulu</p>
     <p>Emilbek </p>
     <p>Maksim</p>
+    <p>Milana</p>
+    <p>Emma </p>
+    <p>Maks</p>
 </body>
 </html>
